// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: className css 1`] = `""`;

exports[`snapshot: className html 1`] = `
<h3
  className="MuiTypography-root MuiTypography-subheading MuiTypography-alignCenter test-class fcTable-nothing fcTypography-root"
>
  No entries to display
</h3>
`;

exports[`snapshot: with text and type css 1`] = `
".MuiTable-root {
  width: 100%;
  overflow: hidden;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  border-spacing: 0;
  border-collapse: collapse;
}
.MuiTableBody-root {
  color: rgba(0, 0, 0, 0.87);
  font-size: 0.8125rem;
}
.MuiTableCell-root {
  text-align: left;
  border-bottom: 1px solid rgba(0, 0, 0, 0.075);
}
.MuiTableCell-numeric {
  text-align: right;
  flex-direction: row-reverse;
}
.MuiTableCell-head {
  position: relative;
  font-weight: 500;
}
.MuiTableCell-paddingDefault {
  padding: 4px 56px 4px 24px;
}
.MuiTableCell-paddingDefault:last-child {
  padding-right: 24px;
}
.MuiTableCell-paddingDense {
  padding-right: 24px;
}
.MuiTableCell-paddingCheckbox {
  padding: 0 12px;
}
.MuiTableCell-footer {
  border-bottom: 0;
}
.MuiTableHead-root {
  color: rgba(0, 0, 0, 0.54);
  font-size: 0.75rem;
  font-weight: 500;
}
.MuiButtonBase-root {
  color: inherit;
  border: 0;
  cursor: pointer;
  display: inline-flex;
  outline: none;
  position: relative;
  appearance: none;
  align-items: center;
  user-select: none;
  border-radius: 0;
  justify-content: center;
  text-decoration: none;
  background-color: transparent;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
.MuiButtonBase-root::-moz-focus-inner {
  border-style: none;
}
.MuiButtonBase-disabled {
  cursor: default;
  pointer-events: none;
}
.MuiSvgIcon-root {
  fill: currentColor;
  width: 24px;
  height: 24px;
  display: inline-block;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  user-select: none;
  flex-shrink: 0;
}
.MuiPaper-root {
  background-color: #fff;
}
.MuiPaper-rounded {
  border-radius: 2px;
}
.MuiPaper-shadow0 {
  box-shadow: none;
}
.MuiPaper-shadow1 {
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow2 {
  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow3 {
  box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow4 {
  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow5 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow6 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow7 {
  box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow8 {
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow9 {
  box-shadow: 0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow10 {
  box-shadow: 0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow11 {
  box-shadow: 0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow12 {
  box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow13 {
  box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow14 {
  box-shadow: 0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow15 {
  box-shadow: 0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow16 {
  box-shadow: 0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow17 {
  box-shadow: 0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow18 {
  box-shadow: 0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow19 {
  box-shadow: 0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow20 {
  box-shadow: 0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow21 {
  box-shadow: 0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow22 {
  box-shadow: 0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow23 {
  box-shadow: 0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow24 {
  box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12);
}
.MuiTableRow-root {
  color: inherit;
  height: 48px;
  display: table-row;
  vertical-align: middle;
}
.MuiTableRow-root:focus {
  outline: none;
}
.MuiTableRow-head {
  height: 56px;
}
.MuiTableRow-footer {
  height: 56px;
}
.MuiTableRow-hover:hover {
  background: #eeeeee;
}
.MuiTableRow-selected {
  background: #f5f5f5;
}
.MuiTableSortLabel-root {
  cursor: pointer;
  display: inline-flex;
  align-items: center;
  flex-direction: inherit;
  justify-content: flex-start;
}
.MuiTableSortLabel-root:hover {
  color: rgba(0, 0, 0, 0.87);
}
.MuiTableSortLabel-root:focus {
  color: rgba(0, 0, 0, 0.87);
}
.MuiTableSortLabel-active {
  color: rgba(0, 0, 0, 0.87);
}
.MuiTableSortLabel-active .MuiTableSortLabel-icon {
  opacity: 1;
}
.MuiTableSortLabel-icon {
  width: 16px;
  height: 16px;
  opacity: 0;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  margin-left: 4px;
  user-select: none;
  margin-right: 4px;
}
.MuiTableSortLabel-desc {
  transform: rotate(0deg);
}
.MuiTableSortLabel-asc {
  transform: rotate(180deg);
}

.fcTableHead-center {
  text-align: center;
}"
`;

exports[`snapshot: with text and type css 2`] = `""`;

exports[`snapshot: with text and type html 1`] = `
<div
  className="MuiPaper-root MuiPaper-shadow4 MuiPaper-rounded fcTable-root fcPaper-root"
>
  <table
    className="MuiTable-root"
  >
    <thead
      className="MuiTableHead-root fcTableHead-root"
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
      >
        <th
          className="MuiTableCell-root MuiTableCell-paddingDefault MuiTableCell-head"
        >
          <span
            className="MuiButtonBase-root MuiTableSortLabel-root"
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            Key
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-desc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </th>
        <th
          className="MuiTableCell-root MuiTableCell-paddingDefault MuiTableCell-head"
        >
          <span
            className="MuiButtonBase-root MuiTableSortLabel-root"
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            Title
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-desc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root"
    >
      <tr
        className="MuiTableRow-root MuiTableRow-hover"
        onClick={[Function]}
        tabIndex={-1}
      >
        <td
          className="MuiTableCell-root fcTable-cell MuiTableCell-paddingDefault"
        >
          key-0
        </td>
        <td
          className="MuiTableCell-root fcTable-cell MuiTableCell-paddingDefault"
        >
          one
        </td>
      </tr>
      <tr
        className="MuiTableRow-root MuiTableRow-hover"
        onClick={[Function]}
        tabIndex={-1}
      >
        <td
          className="MuiTableCell-root fcTable-cell MuiTableCell-paddingDefault"
        >
          key-1
        </td>
        <td
          className="MuiTableCell-root fcTable-cell MuiTableCell-paddingDefault"
        >
          two
        </td>
      </tr>
      <tr
        className="MuiTableRow-root MuiTableRow-hover"
        onClick={[Function]}
        tabIndex={-1}
      >
        <td
          className="MuiTableCell-root fcTable-cell MuiTableCell-paddingDefault"
        >
          key-2
        </td>
        <td
          className="MuiTableCell-root fcTable-cell MuiTableCell-paddingDefault"
        >
          three
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`snapshot: with text and type html 2`] = `
<div
  className="MuiPaper-root MuiPaper-shadow4 MuiPaper-rounded fcTable-root fcPaper-root"
>
  <table
    className="MuiTable-root"
  >
    <thead
      className="MuiTableHead-root fcTableHead-root"
    >
      <tr
        className="MuiTableRow-root MuiTableRow-head"
      >
        <th
          className="MuiTableCell-root MuiTableCell-paddingDefault MuiTableCell-head"
        >
          <span
            className="MuiButtonBase-root MuiTableSortLabel-root"
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            Key
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-desc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </th>
        <th
          className="MuiTableCell-root MuiTableCell-paddingDefault MuiTableCell-head"
        >
          <span
            className="MuiButtonBase-root MuiTableSortLabel-root MuiTableSortLabel-active"
            disabled={undefined}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex={0}
          >
            Title
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root MuiTableSortLabel-icon MuiTableSortLabel-desc"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </span>
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root"
    >
      <tr
        className="MuiTableRow-root MuiTableRow-hover"
        onClick={[Function]}
        tabIndex={-1}
      >
        <td
          className="MuiTableCell-root fcTable-cell MuiTableCell-paddingDefault"
        >
          key-0
        </td>
        <td
          className="MuiTableCell-root fcTable-cell MuiTableCell-paddingDefault"
        >
          one
        </td>
      </tr>
      <tr
        className="MuiTableRow-root MuiTableRow-hover"
        onClick={[Function]}
        tabIndex={-1}
      >
        <td
          className="MuiTableCell-root fcTable-cell MuiTableCell-paddingDefault"
        >
          key-1
        </td>
        <td
          className="MuiTableCell-root fcTable-cell MuiTableCell-paddingDefault"
        >
          two
        </td>
      </tr>
      <tr
        className="MuiTableRow-root MuiTableRow-hover"
        onClick={[Function]}
        tabIndex={-1}
      >
        <td
          className="MuiTableCell-root fcTable-cell MuiTableCell-paddingDefault"
        >
          key-2
        </td>
        <td
          className="MuiTableCell-root fcTable-cell MuiTableCell-paddingDefault"
        >
          three
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`snapshot: without props css 1`] = `
".MuiTypography-root {
  margin: 0;
  display: block;
}
.MuiTypography-display4 {
  color: rgba(0, 0, 0, 0.54);
  font-size: 7rem;
  font-weight: 300;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.14286em;
  margin-left: -.06em;
  letter-spacing: -.04em;
}
.MuiTypography-display3 {
  color: rgba(0, 0, 0, 0.54);
  font-size: 3.5rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.30357em;
  margin-left: -.04em;
  letter-spacing: -.02em;
}
.MuiTypography-display2 {
  color: rgba(0, 0, 0, 0.54);
  font-size: 2.8125rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.06667em;
  margin-left: -.04em;
}
.MuiTypography-display1 {
  color: rgba(0, 0, 0, 0.54);
  font-size: 2.125rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.20588em;
  margin-left: -.04em;
}
.MuiTypography-headline {
  color: rgba(0, 0, 0, 0.87);
  font-size: 1.5rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.35417em;
}
.MuiTypography-title {
  color: rgba(0, 0, 0, 0.87);
  font-size: 1.3125rem;
  font-weight: 500;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.16667em;
}
.MuiTypography-subheading {
  color: rgba(0, 0, 0, 0.87);
  font-size: 1rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.5em;
}
.MuiTypography-body2 {
  color: rgba(0, 0, 0, 0.87);
  font-size: 0.875rem;
  font-weight: 500;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.71429em;
}
.MuiTypography-body1 {
  color: rgba(0, 0, 0, 0.87);
  font-size: 0.875rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.46429em;
}
.MuiTypography-caption {
  color: rgba(0, 0, 0, 0.54);
  font-size: 0.75rem;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.375em;
}
.MuiTypography-button {
  font-size: 0.875rem;
  font-weight: 500;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  text-transform: uppercase;
}
.MuiTypography-alignLeft {
  text-align: left;
}
.MuiTypography-alignCenter {
  text-align: center;
}
.MuiTypography-alignRight {
  text-align: right;
}
.MuiTypography-alignJustify {
  text-align: justify;
}
.MuiTypography-noWrap {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.MuiTypography-gutterBottom {
  margin-bottom: 0.35em;
}
.MuiTypography-paragraph {
  margin-bottom: 16px;
}
.MuiTypography-colorInherit {
  color: inherit;
}
.MuiTypography-colorPrimary {
  color: #3f51b5;
}
.MuiTypography-colorSecondary {
  color: rgba(0, 0, 0, 0.54);
}
.MuiTypography-colorAccent {
  color: #f50057;
}
.MuiTypography-colorError {
  color: #ff1744;
}

.fcTable-root a {
  color: #c51162;
  text-decoration: none;
}
.fcTable-root a:visited {
  color: #c51162;
}
.fcTable-nothing {
  margin-top: 48px;
}
.fcTable-cell {
  white-space: normal;
  padding-top: 8px;
  padding-bottom: 8px;
}
.fcTable-highlight {
  background-color: #e8eaf6;
}
.fcTable-pointer {
  cursor: pointer;
}"
`;

exports[`snapshot: without props html 1`] = `
<h3
  className="MuiTypography-root MuiTypography-subheading MuiTypography-alignCenter fcTable-nothing fcTypography-root"
>
  No entries to display
</h3>
`;
